--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="delete_pllst_str">Playlist deletion</string>
     <string name="del_plst_body">Do you really want to delete playlist?</string>
     <string name="canc_str">Cancel</string>
+    <string name="text_not_found">Sorry, we can\'t find text</string>
+    <string name="track">Track</string>
+    <string name="playlist">Playlist</string>
+    <string name="artist">Artist</string>
+    <string name="album">Album</string>
+    <string name="title">Title</string>
 </resources>
