--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AudioExample</string>
+    <string name="app_name">BatPlayer</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="notification_channel_name">Player controls</string>
 
